added header styles to home page :trollface:

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- Header content starts here -->
     <header>
         <div class="wrapper">
-            <button class="instructionsMenuIcon"><span class="fas fa-bars"></span></button>
+            <h1>dice blackjack <span class="fas fa-dice"></span></h1>
+            <button class="instructionsMenuIcon"><i class="fas fa-bars"></i></button>
             <div class="instructionsMenu">
                 <h2>Instructions</h2>
                 <p>Welcome to Dice BlackJack</p>
@@ -36,7 +37,6 @@
                     </li>
                 </ol>
             </div>
-            <h1>dice blackjack</h1>
         </div>
     </header>
     <!-- Header content ends here -->
