added the instructions menu to appear :trollface:

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- Header content starts here -->
     <header>
         <div class="wrapper">
-            <h1>dice blackjack <span class="fas fa-dice"></span></h1>
+            <h1>dice blackjack<span class="fas fa-dice"></span></h1>
             <button class="instructionsMenuIcon"><i class="fas fa-bars"></i></button>
             <div class="instructionsMenu">
                 <h2>Instructions</h2>
-                <p>Welcome to Dice BlackJack</p>
-                <ol>
+                <p>welcome to dice blackJack</p>
+                <ol class="steps">
                     <li>
                         <p>the objective is to reach 21 or get a higher score than your opponent.</p>
                     </li>
