--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono|Wallpoet&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
@@ -21,13 +21,13 @@
                 <p>welcome to dice blackJack</p>
                 <ol class="steps">
                     <li>
-                        <p>the objective is to reach 21 or get a higher score than your opponent.</p>
+                        <p>the objective of this game is to get a count of 21 or a higher score than the dealer, without going over 21. </p>
                     </li>
                     <li>
-                        <p>try not to go over 21 or you will bust and lose :(</p>
+                        <p>your score will added by a number shown on the dice between 1 to 6. </p>
                     </li>
                     <li>
-                        <p>you will have two buttons to click on after the game has begun. one button will roll a new dice and the other will keep your current score.</p>
+                        <p>you will have two buttons to click on after the game has begun, one button will roll a new dice and the other will keep your current score.</p>
                     </li>
                     <li>
                         <p>click the start button to begin.</p>
@@ -42,20 +42,31 @@
     <!-- Header content ends here -->
     <!-- Main content starts here -->
     <main>
-        <ul class="diceGrid" id="diceGrid">
-
-        </ul>
-        <form action="submit">
-            <button class="start">start</button>
-            <button class="rollNewDice">roll new dice</button>
-            <input type="submit" class="stay" value="stay">
-        </form>
+        <div class="wrapper">
+            <ul class="diceGrid" id="diceGrid">
+                <!-- Dices get added dynamically here -->
+                <li>
+                    <div class="dice diceFace5">
+                        <span class="dot1"></span>
+                        <span class="dot2"></span>
+                        <span class="dot3"></span>
+                        <span class="dot4"></span>
+                        <span class="dot5"></span>
+                        <!-- <span class="dot6"></span>  -->
+                    </div>
+                </li>
+            </ul>
+            <form action="submit" class="playButtons">
+                <button class="rollNewDice">roll new dice</button>
+                <input type="submit" class="stay" value="stay">
+            </form>
+        </div>
     </main>
     <!-- Main content ends here -->
     <!-- Footer content starts here -->
     <footer>
         <div class="wrapper">
-            <p>copyright © vincent dang 2019</p>
+            <p>copyright <span class="far fa-copyright"></span> vincent dang 2019</p>
         </div>
     </footer>
     <!-- Footer content ends here -->
