added media queries to home page :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             <button class="instructionsMenuIcon"><i class="fas fa-bars"></i></button>
             <div class="instructionsMenu">
                 <h2>Instructions</h2>
-                <p>welcome to dice blackJack</p>
                 <ol class="steps">
                     <li>
                         <p>the objective of this game is to get a count of 21 or a higher score than the dealer, without going over 21. </p>
@@ -30,7 +29,7 @@
                         <p>you will have two buttons to click on after the game has begun, one button will roll a new dice and the other will keep your current score.</p>
                     </li>
                     <li>
-                        <p>click the start button to begin.</p>
+                        <p>click roll new dice button to begin.</p>
                     </li>
                     <li>
                         <p>have fun!!! :)</p>
@@ -45,16 +44,16 @@
         <div class="wrapper">
             <ul class="diceGrid" id="diceGrid">
                 <!-- Dices get added dynamically here -->
-                <li>
-                    <div class="dice diceFace5">
+                <!-- <li>
+                    <div class="dice diceFace1">
                         <span class="dot1"></span>
                         <span class="dot2"></span>
                         <span class="dot3"></span>
                         <span class="dot4"></span>
                         <span class="dot5"></span>
-                        <!-- <span class="dot6"></span>  -->
+                        <span class="dot6"></span>
                     </div>
-                </li>
+                </li> -->
             </ul>
             <form action="submit" class="playButtons">
                 <button class="rollNewDice">roll new dice</button>
