added sounds effects and animations :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="userScoreIndicator" id="userScoreIndicator"></div>
             <form action="submit" class="playButtons" id="playButtons">
                 <button class="rollNewDice" id="rollNewDice" type="button">roll new dice</button>
-                <input type="submit" class="stay" value="stay">
+                <input type="submit" class="stand" value="stand">
             </form>
         </div>
     </main>
