added new images :trollface:

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Animated favicon obtained from https://www.favicon.cc/?action=icon&file_id=112286 -->
-    <link rel="shortcut icon" href="/assets/staticDiceFavicon.ico" type="image/x-icon">
-    <link rel="icon" href="/assets/animatedDiceFavicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- Animate.css obtained from https://github.com/daneden/animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Space+Mono|Wallpoet&display=swap" rel="stylesheet">
