added animations to the start screen :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -49,12 +49,229 @@
         <div class="wrapper">
             <ul class="diceGrid" id="diceGrid">
                 <!-- Dices get added dynamically here -->
-                <li>
-                  <div class="dice diceFace1 startDice1">
-                      <span class="dot1"></span>
-                  </div>
+                <li class="startScreenDice">
+                    <div class="startDice startDice1">
+                        <div class="diceFace startDiceFace1">
+                            <span class="dot1"></span>
+                        </div>
+                        <div class="diceFace startDiceFace2">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                        </div>
+                        <div class="diceFace startDiceFace3">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            </div>
+                        <div class="diceFace startDiceFace4">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                        </div>
+                        <div class="diceFace startDiceFace5">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                        </div>
+                        <div class="diceFace startDiceFace6">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                            <span class="dot6"></span>
+                        </div>
+                    </div>
                 </li>
-                <li>
+                <li class="startScreenDice">
+                    <div class="startDice startDice2">
+                        <div class="diceFace startDiceFace1">
+                            <span class="dot1"></span>
+                        </div>
+                        <div class="diceFace startDiceFace2">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                        </div>
+                        <div class="diceFace startDiceFace3">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            </div>
+                        <div class="diceFace startDiceFace4">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                        </div>
+                        <div class="diceFace startDiceFace5">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                        </div>
+                        <div class="diceFace startDiceFace6">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                            <span class="dot6"></span>
+                        </div>
+                    </div>
+                </li>
+                <li class="startScreenDice">
+                    <div class="startDice startDice3">
+                        <div class="diceFace startDiceFace1">
+                            <span class="dot1"></span>
+                        </div>
+                        <div class="diceFace startDiceFace2">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                        </div>
+                        <div class="diceFace startDiceFace3">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            </div>
+                        <div class="diceFace startDiceFace4">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                        </div>
+                        <div class="diceFace startDiceFace5">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                        </div>
+                        <div class="diceFace startDiceFace6">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                            <span class="dot6"></span>
+                        </div>
+                    </div>
+                </li>
+                <li class="startScreenDice">
+                    <div class="startDice startDice4">
+                        <div class="diceFace startDiceFace1">
+                            <span class="dot1"></span>
+                        </div>
+                        <div class="diceFace startDiceFace2">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                        </div>
+                        <div class="diceFace startDiceFace3">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            </div>
+                        <div class="diceFace startDiceFace4">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                        </div>
+                        <div class="diceFace startDiceFace5">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                        </div>
+                        <div class="diceFace startDiceFace6">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                            <span class="dot6"></span>
+                        </div>
+                    </div>
+                </li>
+                <li class="startScreenDice">
+                    <div class="startDice startDice5">
+                        <div class="diceFace startDiceFace1">
+                            <span class="dot1"></span>
+                        </div>
+                        <div class="diceFace startDiceFace2">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                        </div>
+                        <div class="diceFace startDiceFace3">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            </div>
+                        <div class="diceFace startDiceFace4">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                        </div>
+                        <div class="diceFace startDiceFace5">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                        </div>
+                        <div class="diceFace startDiceFace6">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                            <span class="dot6"></span>
+                        </div>
+                    </div>
+                </li>
+                <li class="startScreenDice">
+                    <div class="startDice startDice6">
+                        <div class="diceFace startDiceFace1">
+                            <span class="dot1"></span>
+                        </div>
+                        <div class="diceFace startDiceFace2">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                        </div>
+                        <div class="diceFace startDiceFace3">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            </div>
+                        <div class="diceFace startDiceFace4">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                        </div>
+                        <div class="diceFace startDiceFace5">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                        </div>
+                        <div class="diceFace startDiceFace6">
+                            <span class="dot1"></span>
+                            <span class="dot2"></span>
+                            <span class="dot3"></span>
+                            <span class="dot4"></span>
+                            <span class="dot5"></span>
+                            <span class="dot6"></span>
+                        </div>
+                    </div>
+                </li>
+                <!-- <li>
                   <div class="dice diceFace2 startDice2">
                       <span class="dot1"></span>
                       <span class="dot2"></span>
@@ -93,7 +310,7 @@
                       <span class="dot5"></span>
                       <span class="dot6"></span>
                   </div>
-                </li>
+                </li> -->
             </ul>
             <div class="userScoreIndicator" id="userScoreIndicator"></div>
             <form action="submit" class="playButtons" id="playButtons">
