debugged a couple of bugs :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <p>your total score will added by the number shown on the dice between 1 to 6 and you will have $50 for your balance starting off.</p>
                     </li>
                     <li>
-                        <p>there are three play buttons: the roll new dice button will roll a dice after you have made a bet, the bet button will allow you to decide how much you want to wager and the stand button will keep your current score if you wish to stay where you are.</p>
+                        <p>there are three play buttons: the roll new dice button will roll a dice after you have made a bet, the bet button will allow you to decide how much you want to wager and the stand button will keep your current score and end the round.</p>
                     </li>
                     <li>
                         <p>click the start button to begin.</p>
