debugged a couple of bugs :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </main>
     <!-- Main content ends here -->
     <!-- Footer content starts here -->
-    <footer>
+    <footer id="footer">
         <div class="wrapper">
             <p>copyright <span class="far fa-copyright"></span> vincent dang 2019</p>
         </div>
