changed the year :smiley_cat:

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
     <!-- Footer content starts here -->
     <footer id="footer">
         <div class="wrapper">
-            <p>copyright <span class="far fa-copyright"></span> vincent dang 2019</p>
+            <p>copyright <span class="far fa-copyright"></span> vincent dang <span id="year"></span></p>
         </div>
     </footer>
     <!-- Footer content ends here -->
